Servicio busqueda de pariente mas cercano finalizado, documentacion de servicios swagger
